--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+	 <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-1WE5HY7FH4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-1WE5HY7FH4');
+	</script>
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="Content-Type" content="text/html" charset="utf-8" />
 	 <title>Quality, Compliance & Regulatory</title>
 		<link rel="stylesheet" href="css/style.css"/>
