--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
  <div class="content">
  <div class="quotes_container2">
  <h4 class="author_name_white">Contact </h4>
- <h3 class="quotes">Please email us at <br> safefood247@gmail.com</h3>
+ <h3 class="quotes">Please email us at <br> safefoods247@gmail.com</h3>
  </div> 
  </div> 
  </div>
